--- a/android/sample/src/main/res/layout/sample_activity.xml
+++ b/android/sample/src/main/res/layout/sample_activity.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:text="@string/app_name"
@@ -20,14 +20,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/enter_hera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="10dp"
-            android:drawableTop="@drawable/ic_logo"
             android:gravity="center"
             android:text="@string/enter_hera"
             android:textColor="@color/colorPrimaryDark"
