--- a/android/sample/src/main/res/values/colors.xml
+++ b/android/sample/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C60A1E</color>
-    <color name="colorPrimaryDark">#9E0818</color>
-    <color name="colorAccent">#C60A1E</color>
+    <color name="colorPrimary">#202226</color>
+    <color name="colorPrimaryDark">#131417</color>
+    <color name="colorAccent">#202226</color>
 </resources>
