--- a/android/sample/src/main/res/layout/sample_activity.xml
+++ b/android/sample/src/main/res/layout/sample_activity.xml
@@ -14,8 +14,7 @@
         android:paddingRight="15dp"
         android:text="@string/app_name"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textSize="17dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,8 +28,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/enter_hera"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp" />
+            android:textColor="@color/colorPrimary"
+            android:textSize="17dp" />
     </LinearLayout>
 
 </LinearLayout>
