--- a/android/sample/src/main/res/layout/sample_activity.xml
+++ b/android/sample/src/main/res/layout/sample_activity.xml
@@ -27,8 +27,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:text="@string/enter_hera"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/color_button"
+            android:textSize="17dp" />
+
+        <TextView
+            android:id="@+id/tv_h5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="普通h5"
+            android:textColor="@color/color_button"
             android:textSize="17dp" />
     </LinearLayout>
 
